--- a/package.json
+++ b/package.json
@@ -34,8 +34,14 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/babel__core": "^7.1.18",
+    "@types/eslint": "^8.2.2",
+    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.23",
+    "@types/prettier": "^2.4.2",
+    "@types/react": "17.0.2",
     "@types/react-native": "^0.66.4",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.19",
     "@types/styled-components-react-native": "^5.1.3",
