--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/eslint": "^8.2.2",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.23",
+    "@types/navermaps": "^3.0.13",
     "@types/prettier": "^2.4.2",
     "@types/react": "17.0.2",
     "@types/react-native": "^0.66.4",
