--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@reduxjs/toolkit": "^1.7.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-geolocation-service": "^5.3.0-beta.4",
@@ -32,6 +33,8 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -47,6 +50,7 @@
     "@types/react": "17.0.2",
     "@types/react-native": "^0.66.4",
     "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-redux": "^7.1.21",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.19",
     "@types/styled-components-react-native": "^5.1.3",
