--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "npm run pod:install && react-native run-ios",
     "build:ios": "npm run pod:install",
     "start": "react-native start",
+    "gradle:clean": "cd android && ./gradlew clean && cd ../",
     "pod:install": "npm run pod:clean && cd ios && pod install && cd ../",
     "pod:clean": "cd ios && pod cache clean --all && cd ../",
     "pod:remove:all": "rm -rf ./ios/Pods/",
