--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --check ./src"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
