--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-geolocation-service": "^5.3.0-beta.4",
@@ -47,6 +48,7 @@
     "@types/eslint": "^8.2.2",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.178",
     "@types/navermaps": "^3.0.13",
     "@types/prettier": "^2.4.2",
     "@types/react": "17.0.2",
