--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-redux": "^7.1.21",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.19",
+    "@types/styled-components": "5.1.6",
     "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
